# pet_sitter_be

./: .env_template  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml
pet_sitter_be/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
pet_sitter_be/pet_sitter_be/: asgi.py  urls.py  wsgi.py
pet_sitter_be/reg/: serializers.py
pet_sitter_be/reg/migrations/: 0001_initial.py
reg/: models.py  tests.py  urls.py  views.py
reg/migrations/: 0001_initial.py
web/account/: serializers.py  urls.py  views.py
web/registration/: models.py  urls.py  views.py
web/temp/: tests.py  urls.py  views.py
web/users/: models.py  serializers.py  urls.py  views.py
web/users/migrations/: 0001_initial.py
web/users/serializers/: registration_serializers.py  users_serializers.py
web/users/views/: registration_views.py  users_views.py
web/web/: celery.py  settings.py  urls.py
